# docs/swagger_output.json
@@ -16,34 +16,6 @@
     }
   ],
   "paths": {
-    "/v1/auth/register": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        },
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterRequest"
-              }
-            },
-            "application/xml": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterRequest"
-              }
-            }
-          }
-        }
-      }
-    },
     "/v1/auth/login": {
       "post": {
         "tags": [
@@ -89,6 +61,202 @@
           }
         ]
       }
+    },
+    "/v1/applications": {
+      "post": {
+        "tags": [
+          "Applications"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/createApplicants"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/createApplicants"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/applicants": {
+      "get": {
+        "tags": [
+          "Applicants"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "default": 1,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "perPage",
+            "in": "query",
+            "default": 10,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "fullName",
+            "in": "query",
+            "default": "",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "country",
+            "in": "query",
+            "default": "",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "jobRole",
+            "in": "query",
+            "default": "",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "default": "",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ]
+      }
+    },
+    "/v1/applicants/{id}": {
+      "get": {
+        "tags": [
+          "Applicants"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ]
+      }
+    },
+    "/v1/media/upload-single": {
+      "post": {
+        "tags": [
+          "Media"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/media/remove": {
+      "delete": {
+        "tags": [
+          "Media"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": {}
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RemoveMediaRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/RemoveMediaRequest"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -115,28 +283,52 @@
           "name": "LoginRequest"
         }
       },
-      "RegisterRequest": {
+      "createApplicants": {
         "type": "object",
         "properties": {
           "fullName": {
             "type": "string",
-            "example": "yourname"
+            "example": "user33"
           },
           "email": {
             "type": "string",
-            "example": "youremail@mail.com"
+            "example": "user33@gmail.com"
           },
-          "password": {
-            "type": "string",
-            "example": "yourpassword"
+          "yearsOfExperience": {
+            "type": "number",
+            "example": 1
           },
-          "confirmPassword": {
+          "phone": {
             "type": "string",
-            "example": "yourConfirmpassword"
+            "example": "08123321"
+          },
+          "jobRole": {
+            "type": "string",
+            "example": "test"
+          },
+          "country": {
+            "type": "string",
+            "example": "test"
+          },
+          "resumeUrl": {
+            "type": "string",
+            "example": "url"
           }
         },
         "xml": {
-          "name": "RegisterRequest"
+          "name": "createApplicants"
+        }
+      },
+      "RemoveMediaRequest": {
+        "type": "object",
+        "properties": {
+          "fileUrl": {
+            "type": "string",
+            "example": "mediaURL"
+          }
+        },
+        "xml": {
+          "name": "RemoveMediaRequest"
         }
       }
     }
